--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,25 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+#default_envs = c17gh3, BHT002
+#default_envs = BHT002
+default_envs = c17gh3
 
-[env:esp12e]
+[env:c17gh3]
 platform = espressif8266
 board = esp12e
 framework = arduino
-lib_deps = PubSubClient, WifiManager
-upload_port=/dev/ttyUSB0 
+lib_deps = PubSubClient, WifiManager, ArduinoJson
+build_flags=-DC17GH3
+src_filter=+<*.h> +<*.cpp> -<BHT002.*>
+upload_port=/dev/ttyUSB0
+
+[env:BHT002]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+lib_deps = PubSubClient, WifiManager, ArduinoJson
+upload_port=/dev/ttyUSB0
+src_filter=+<*.h> +<*.cpp> -<C17GH3.*>
+build_flags=-DBHT002GBLW -Wl,-Teagle.flash.1m64.ld
